# Polynomial-roots-finding

Polynomial/: CMakeLists.txt
Polynomial/Polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  generate_high_degree_polynomial.h
Polynomial/documentation/: Bairstow.md  CF.md  Graeffe.md  Jenkins–Traub.md  README.md  Sagralov.md  Wilf.md  generate_polynomial.md  structure.md
Polynomial/methods/: CAD.h  Durand-Kerner.h  Graeffe_complex_roots.h  Graeffe_real_roots.h  Helper_for_all_methods.h  Sagralov_ANewDsc.h  Sagralov_complex_roots.h  Sagralov_real_roots.h
Polynomial/methods/Bairstow/: Bairstow.h  Bairstow_Helper.h
Polynomial/methods/Continued_Fractions/: Con_Frac.h  Con_Frac_Helper.h
Polynomial/methods/Graeffe/: Graeffe_Jurchse.h  Graeffe_SanJuan.h  Graeffe_Yurksch.h  Graeffe_complex_roots.h  Graeffe_real_roots.h
Polynomial/methods/JenkinsTraub/: JenkinsTraub.h  JenkinsTraub_Helper.h
Polynomial/methods/Sagralov/: IntervalArithmetic.h  Sagralov_ANewDsc.h  Sagralov_complex_roots.h  Sagralov_detail.h  Sagralov_real_roots.h
Polynomial/methods/Wilf/: Wilf.h  wilf_root_finder.hpp
Polynomial/precisionSource/: NumericConcepts.h  NumericConstants.h  complexprecision.h  fprecision.h  mathUtils.h  multipolyprecision.h  polynomialUtils.h  polyprecision.h  precisioncore.cpp
Polynomial/test_results/: ANewDsc_results.txt  Bairstow_results.txt  CIsolate_results.txt  Graeffe_results.txt  Hausman_results.txt  Jekins_Traub_results.txt  Jurchse_results.txt  VCA_results.txt  Wilf_results.txt  continued_fractions_results.txt  sanjuan_results.txt
Polynomial/tests/: ANewDsc_real_roots_test.cpp  bairstow_roots_test.cpp  continued_fractions_test.cpp  generate_polynomial_test.cpp  graeffe_complex_roots_test.cpp  graeffe_jurchse_test.cpp  graeffe_real_roots_test.cpp  graeffe_sanjuan_test.cpp  jenkins_traub_roots_test.cpp  sagralov_complex_roots_test.cpp  sagralov_real_roots_test.cpp  wilf_roots_test.cpp
Polynomial/theory/: authors.md
precisionSource/: NumericConcepts.h
tests/: ANewDsc_real_roots_test.cpp  sagralov_complex_roots_test.cpp
